# agent-chat

./: .env.example  .gitignore  Cargo.toml  Dockerfile  GEMINI.md  README.md  README.zh-TW.md  build_release.ps1  daemon_config.json  docker-compose.yml  run_api.ps1  run_daemon.ps1  run_tests.ps1  websocket_test.html
openspec/changes/add-daemon-settings-ui/: design.md
openspec/changes/add-frontend/: .openspec.yaml
openspec/changes/daemon-task-queue-polling/: .openspec.yaml  design.md  proposal.md
openspec/changes/rust-axum-agent-bridge/: design.md  proposal.md
openspec/specs/agent-bridge/: spec.md
openspec/specs/client-chat-ui/: spec.md
openspec/specs/daemon-settings/: spec.md
src/: main.rs
src/api/: errors.rs  mod.rs
src/api/dto/: message_dto.rs  mod.rs  session_dto.rs
src/api/routes/: health.rs  mod.rs  sessions.rs  websocket.rs
src/application/: mod.rs
src/application/models/: events.rs  message.rs  mod.rs  session.rs  task.rs
src/application/ports/: message_repository.rs  mod.rs  runtime_gateway.rs  session_repository.rs  ws_notifier.rs
src/application/services/: cleanup_service.rs  message_service.rs  mod.rs  runtime_service.rs  session_service.rs
src/frontend/: index.html  index.js  style.css  style.scss
src/infrastructure/: mod.rs
src/infrastructure/config/: env.rs
src/infrastructure/db/: message_repository_impl.rs  mod.rs  session_repository_impl.rs  sqlite.rs
src/infrastructure/realtime/: mod.rs  ws_registry.rs
src/infrastructure/runtime/: daemon_client.rs  daemon_settings.rs  gemini_cli.rs  mod.rs  process_manager.rs  (+1 more)
(+22 files in other folders)
