[package]
name = "rust-axum-agent-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
futures-util = "0.3.30"
uuid = { version = "1.9.1", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
tokio-stream = "0.1.15"
